# python-starter

./: LICENSE  MANIFEST.in  mkdocs.yaml  pyproject.toml
src/example_package/: __init__.py
tests/: test_example_function.py
